@@ -1,5 +1,11 @@
 2022-04-16  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* configure.ac: Remove algol68 bindings support.
+	* Makefile.am: Remove algol68 from subdirs.
+	* algol68: Delete.
+
+2022-04-16  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* src/rec.h (enum rec_std_field_e): New entry REC_FIELD_SINGULAR.
 	* src/rec-field-name.c (fnames): Add "singular".
 	* src/rec-rset.c (rec_rset_rename_field): Handle
